Pending changes in the mainline
===============================

Maintenance
-----------

* Security: If remote access is enabled, HTTP authentication is also enabled by default
* Log an explicit error if uploading an empty DICOM file using REST API
* Name of temporary files now include the process ID to ease design of scripts cleaning /tmp
* Fix compatibility of LSB binaries with Ubuntu >= 18.04
* Fix generation of "SOP Instance UID" on split and merge
* Orthanc Explorer: include the url search params into HTTP headers to the Rest API to ease usage of the Authorization plugin
  Note that only the 'token', 'auth-token' & 'authorization' search params are transmitted into HTTP headers.
* in /ordered-slices route, ignore instances without position/normal/seriesIndex
* Fix lost relationships between CT and RT-STRUCT during anonymization

Version 1.5.7 (2019-06-25)
==========================

REST API
--------

* API version has been upgraded to 3
* "/modalities/{id}/query": New argument "Normalize" can be set to "false"
  to bypass the automated correction of outgoing C-FIND queries
* Reporting of "ParentResources" in "DicomModalityStore" and "DicomModalityStore" jobs

Plugins
-------

* New functions in the SDK:
  - OrthancPluginHttpClientChunkedBody(): HTTP client for POST/PUT with a chunked body
  - OrthancPluginRegisterMultipartRestCallback(): HTTP server for POST/PUT with multipart body
  - OrthancPluginGetTagName(): Retrieve the name of a DICOM tag from its group and element

Maintenance
-----------

* Orthanc now accepts "-H 'Transfer-Encoding: chunked'" option from curl
* Size of the Orthanc static binaries are reduced by compressing ICU data
* Anonymization: Preserve hierarchical relationships in (0008,1115) [] (0020,000e)
* Allow the serialization of signed 16bpp images in PAM format
* HTTP header "Accept-Encoding" is honored for streams without built-in support for compression