@@ -136,6 +136,19 @@ namespace Orthanc
 
   static void ExecuteScript(RestApiPostCall& call)
   {
+    {
+      OrthancConfiguration::ReaderLock lock;
+
+      static const char* const OPTION = "ExecuteLuaEnabled";
+      if (!lock.GetConfiguration().GetBooleanParameter(OPTION, false))
+      {
+        LOG(ERROR) << "The URI /tools/execute-script is disallowed for security, "
+                   << "check value of configuration option \"" << OPTION << "\"";
+        call.GetOutput().SignalError(HttpStatus_403_Forbidden);
+        return;
+      }
+    }
+
     std::string result;
     ServerContext& context = OrthancRestApi::GetContext(call);
 
